discussion/kv_engine/128640/128640_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Move server_stats to StatCollector interface

Change-Id: I0036d990c26f1a1607def6841ed85610bbde5bc2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-21 16:58:05.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-21 17:26:07.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2352/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: unknown type name "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: unknown type name "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:65:1: error: expected function body after function declarator [clang-diagnostic-error]
STAT(ep_storage_age_highwat, microseconds)
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2352/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6:
error: unknown type name "ep_storage_age" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2352/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24190/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24190/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/868/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
